# COARE-algorithm

./: .gitignore  pyproject.toml
Python/COARE3_5/: bulk.py  coare35vn.py  meteo.py
Python/COARE3_6/: coare36vnWarm_et.py  coare36vn_zrf_et.py
